# zero2prod

./: .gitignore  Cargo.toml  Dockerfile  README.md  configuration.yaml  spec.yaml  sqlx-data.json
.cargo/: config.toml
configs/: base.yaml  local.yaml  production.yaml  staging.yaml
migrations/: 20240117221629_add_automatic_updated_at_column_function.sql  20240117221639_create_subscriptions_table.sql  20240207084233_add_column_status_in_subscriptions_table.sql  20240218173742_create_users_table.sql  20240223011321_add_salt_column_to_users_table.sql  20240223014156_drop_salt_column_in_users_table.sql  20240226053539_user_seeder.sql
scripts/: init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  lib.rs  main.rs  session_state.rs  startups.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domains/: new_subscriber.rs  subscriber_email.rs  subscriber_name.rs
src/routes/: mod.rs  newsletters.rs  subscription_confirms.rs  subscriptions.rs
src/routes/admin/: dashboard.rs  logout.rs  mod.rs
src/routes/admin/password/: get.rs  post.rs
src/routes/home/: index.html  mod.rs
src/routes/login/: get.rs  login.html  post.rs
tests/: health_check.rs  heatlh_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscription_confirms.rs  subscriptions.rs
